--- a/index.html
+++ b/index.html
@@ -156,9 +156,6 @@
                 <h3>Canva</h3>
                 <p>Designing vibrant and professional marketing materials with Canva.</p>
             </div>
-
-
-
         </div>
     </section>
 
@@ -256,6 +253,23 @@
                     <a href="https://github.com/username/image-editor" target="_blank">GitHub</a>
                 </div>
             </div>
+
+            <!-- Piano JS Project -->
+            <div class="project-box">
+                <i class="fa-solid fa-music"></i>
+                <h3>Virtual Piano</h3>
+                <p>
+                    An interactive virtual piano built using HTML, CSS, and JavaScript.
+                    It works with mouse/touch input as well as keyboard keys for playing notes.
+                </p>
+
+                <div class="project-links">
+                    <a href="https://live-demo-link.com" target="_blank">Live Demo</a>
+                    <a href="https://github.com/username/piano-js" target="_blank">GitHub</a>
+                </div>
+            </div>
+
+
 
         </div>
     </section>
