update project links and improve formatting in index.html

--- a/index.html
+++ b/index.html
@@ -171,8 +171,10 @@
                 <p>A website that helps users discover which network (Jio or Airtel) works best in their area based on
                     signal strength and connectivity tests.</p>
                 <div class="project-links">
-                    <a href="https://live-demo-link.com" target="_blank">Live Demo</a>
-                    <a href="https://github.com/username/image-editor" target="_blank">GitHub</a>
+                    <a href="https://vishuddhanand.github.io/Best-Network-Finder-Airtel-or-Jio/" target="_blank">Live
+                        Demo</a>
+                    <a href="https://github.com/Vishuddhanand/Best-Network-Finder-Airtel-or-Jio"
+                        target="_blank">GitHub</a>
                 </div>
             </div>
 
@@ -183,8 +185,8 @@
                     customized
                     profile card using HTML, CSS, and JavaScript.</p>
                 <div class="project-links">
-                    <a href="https://live-demo-link.com" target="_blank">Live Demo</a>
-                    <a href="https://github.com/username/image-editor" target="_blank">GitHub</a>
+                    <a href="https://vishuddhanand.github.io/Profile-Card-Generator/" target="_blank">Live Demo</a>
+                    <a href="https://github.com/Vishuddhanand/Profile-Card-Generator" target="_blank">GitHub</a>
                 </div>
             </div>
 
@@ -197,13 +199,13 @@
                     smooth interactive scrolling.</p>
 
                 <div class="project-links">
-                    <a href="https://live-demo-link.com" target="_blank">Live Demo</a>
-                    <a href="https://github.com/username/image-editor" target="_blank">GitHub</a>
+                    <a href="https://vishuddhanand.github.io/silent-scroll-reel-project/" target="_blank">Live Demo</a>
+                    <a href="https://github.com/Vishuddhanand/silent-scroll-reel-project" target="_blank">GitHub</a>
                 </div>
             </div>
 
 
-            <!-- Image Editor -->
+            <!-- Image Editor
             <div class="project-box">
                 <i class="fa-solid fa-image"></i>
                 <h3>Image Editor</h3>
@@ -214,7 +216,7 @@
                     <a href="https://live-demo-link.com" target="_blank">Live Demo</a>
                     <a href="https://github.com/username/image-editor" target="_blank">GitHub</a>
                 </div>
-            </div>
+            </div> -->
 
 
             <!-- Snake Game -->
@@ -224,8 +226,8 @@
                 <p>A classic Snake game with responsive design, high-score tracking, and keyboard controls. Built using
                     HTML, CSS, and JS.</p>
                 <div class="project-links">
-                    <a href="https://live-demo-link.com" target="_blank">Live Demo</a>
-                    <a href="https://github.com/username/image-editor" target="_blank">GitHub</a>
+                    <a href="https://vishuddhanand.github.io/snake-game/" target="_blank">Live Demo</a>
+                    <a href="https://github.com/Vishuddhanand/snake-game" target="_blank">GitHub</a>
                 </div>
             </div>
 
@@ -236,13 +238,13 @@
                 <p>A fully responsive e-commerce frontend for a client including product pages, shopping cart, and
                     smooth animations. Built with HTML, CSS, and JS.</p>
                 <div class="project-links">
-                    <a href="https://live-demo-link.com" target="_blank">Live Demo</a>
-                    <a href="https://github.com/username/image-editor" target="_blank">GitHub</a>
+                    <a href="https://vishuddhanand.github.io/E-Commerce-Website/" target="_blank">Live Demo</a>
+                    <a href="https://github.com/Vishuddhanand/E-Commerce-Website" target="_blank">GitHub</a>
                 </div>
             </div>
 
             <!-- Productivity Dashboard -->
-            <div class="project-box">
+            <!-- <div class="project-box">
                 <i class="fa-solid fa-clipboard-list"></i>
                 <h3>Productivity Dashboard</h3>
                 <p>A web app for productivity with To-Do List, Daily Planner, Pomodoro Timer, Motivational Quotes,
@@ -252,7 +254,7 @@
                     <a href="https://live-demo-link.com" target="_blank">Live Demo</a>
                     <a href="https://github.com/username/image-editor" target="_blank">GitHub</a>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Piano JS Project -->
             <div class="project-box">
@@ -264,8 +266,8 @@
                 </p>
 
                 <div class="project-links">
-                    <a href="https://live-demo-link.com" target="_blank">Live Demo</a>
-                    <a href="https://github.com/username/piano-js" target="_blank">GitHub</a>
+                    <a href="https://vishuddhanand.github.io/piano-JS/" target="_blank">Live Demo</a>
+                    <a href="https://github.com/Vishuddhanand/piano-JS" target="_blank">GitHub</a>
                 </div>
             </div>
 
@@ -370,7 +372,7 @@
 
         const sendBtn = document.querySelector('.send-btn');
 
-        sendBtn.addEventListener('click' , ()=>{
+        sendBtn.addEventListener('click', () => {
             alert("Message Sent Successfully")
         })
 
