fix: update project links for Image Editor to point to the correct URLs

--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
                     Users can instantly see changes, built using HTML, CSS, and JavaScript.
                 </p>
                 <div class="project-links">
-                    <a href="https://live-demo-link.com" target="_blank">Live Demo</a>
-                    <a href="https://github.com/username/image-editor" target="_blank">GitHub</a>
+                    <a href="https://vishuddhanand.github.io/Image-Editor/" target="_blank">Live Demo</a>
+                    <a href="https://github.com/Vishuddhanand/Image-Editor" target="_blank">GitHub</a>
                 </div>
             </div>
 
