fix: update LinkedIn link to point to the correct profile

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     Currently, I’m sharpening my skills in data structures, full-stack development,
                     and artificial intelligence with the goal of contributing to cutting-edge tech solutions.
                 </p>
-                <a href="#" class="btn">Connect on LinkedIn</a>
+                <a href="https://www.linkedin.com/in/vishuddhanand-pillewan/" class="btn">Connect on LinkedIn</a>
             </div>
         </div>
 
